# SENTINEL-STOCKHOLM

./: .gitignore  AGENT_INSTRUCTIONS.md  ANALYSIS_SUMMARY.md  AUDIT_v2.md  CHECKLIST.md  CHECKLIST_v2.md  CRITIQUE.md  DATABASE.md  Dockerfile  PLAN_v2.md  README.md  RESULTS.md  REVIEW.md  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
dashboard/: package.json
demo/: index.html  package-lock.json  package.json  tsconfig.app.json
paper/: checklist.tex  main.tex  sjwp_paper.docx  sjwp_paper.tex
results/: SENTINEL_2.0_Results_Summary.md  audit_corrections_20260531.json  early_detection_test.json  ph_strip_reader_results.json  ph_strip_simulation.json  sentinel2_comprehensive_summary.json  sentinel_mini_pipeline_test.json  waterdronenet_crisis_test.json
ros2_ws/: Makefile  README.md
scripts/: build_tierA_figures.py  causal_real_eval.py  compile_results.py  discover_usgs_stations.py  download_drone_s2_pairs.py  download_geo_transcriptomics.py  download_habs_wqp.py  download_habs_wqp_cyanotoxins.py  download_noaa_habs.py  download_s2_massive.py  download_s2_quick.py  download_sensor_fast.py  download_usgs_biodata.py  evaluate_disease_forecast.py  evaluate_twin.py  exp10_mc_dropout.py  exp11_label_noise_sensitivity.py  exp13_prpo_audit.py  exp14_cross_site_generalization.py  exp16_parameter_attribution.py  exp18_seasonal_analysis.py  exp1_case_studies_real.py  exp2_baseline_comparison.py  exp3_epa_violation_correlation.py  exp4_satellite_imagery.py  exp5_explainability.py  exp6_propagation.py  exp7_crossmodal_alignment.py  (+55 more)
(+390 files in other folders)
